spec/v1/examples/minimal/rendered/apps/notes/networkpolicy.yaml
# GENERATED. Never hand-edit.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notes-api
  namespace: notes-system
  labels:
    app.kubernetes.io/name: notes-api
    app.kubernetes.io/instance: notes-api
    app.kubernetes.io/part-of: notes
    app.kubernetes.io/managed-by: deploy-kit
    app.kubernetes.io/component: node
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: notes-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: traefik-public
    ports:
    - protocol: TCP
      port: 8080
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: utility-system
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: prometheus
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
